fixed width requirements so nav bar is never cut off

--- a/hotel/src/app/main.css
+++ b/hotel/src/app/main.css
@@ -84,7 +84,7 @@
     display: none;
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 680px) {
       .nav-container {
         display: none;
       }
